force-app/main/default/objects/QTB_Promotion__c/QTB_Promotion__c.object-meta.xml
<CustomObject>
    <description>#GITLAB-367: To capture the promotions</description>
    <label>Promotion</label>
    <nameField>
        <label>Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>