force-app/main/default/objects/QTB_Promotion__c/fields/QTB_Country__c.field-meta.xml
<CustomField>
    <fullName>QTB_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#GITLAB: 376 --&gt; to store the country value</description>
    <label>Country</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>IM_Country__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>IM_Country__c</referenceTo>
    <relationshipLabel>Promotions</relationshipLabel>
    <relationshipName>Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>