force-app/main/default/objects/QTB_Promotion__c/fields/QTB_End_Date__c.field-meta.xml
<CustomField>
    <fullName>QTB_End_Date__c</fullName>
    <description>#GITLAB: 376: To store the end date of the promotion</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>