force-app/main/default/objects/QTB_Promotion__c/fields/QTB_Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>QTB_Promo_Code__c</fullName>
    <description>#Gitllab: 376: --&gt; to store the promo code of the promotion</description>
    <displayFormat>PC-{0000}</displayFormat>
    <label>Promotion Code</label>
    <type>AutoNumber</type>
</CustomField>