force-app/main/default/objects/QTB_Promotion__c/fields/QTB_Promo_Description__c.field-meta.xml
<CustomField>
    <fullName>QTB_Promo_Description__c</fullName>
    <description>#Gitlab:411-To show the Promo Description</description>
    <label>Promotion Description</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>