force-app/main/default/objects/QTB_Promotion__c/fields/QTB_Promo_Inactive__c.field-meta.xml
<CustomField>
    <fullName>QTB_Promo_Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#GITLAB:376  --&gt; to inactivate the promotion</description>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>