force-app/main/default/objects/QTB_Promotion__c/fields/QTB_Promo_Term__c.field-meta.xml
<CustomField>
    <fullName>QTB_Promo_Term__c</fullName>
    <description>#GITLAB: 376 --&gt; to store the promotional term</description>
    <label>Promotion Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>