force-app/main/default/objects/QTB_Promotion__c/fields/QTB_Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>QTB_Quote_Type__c</fullName>
    <description>#GITLAB:376 --&gt; to store the quote type</description>
    <label>Quote Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
                <label>New</label>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
                <label>Up sell</label>
            </value>
            <value>
                <fullName>Re-Quote</fullName>
                <label>Cross Sell</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>