force-app/main/default/objects/QTB_Promotion__c/fields/QTB_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>QTB_Start_Date__c</fullName>
    <description>#GITLAB:376 --&gt; to store the start date of the promotion</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>