force-app/main/default/objects/QTB_Promotion__c/validationRules/QTB_mutual_exclusive_on_amount_percent.validationRule-meta.xml
<ValidationRule>
    <fullName>QTB_mutual_exclusive_on_amount_percent</fullName>
    <active>true</active>
    <description>#GITLAB:376</description>
    <errorConditionFormula>AND(NOT($Setup.Metadata_Activation_Settings__c.Disable_VR__c &amp;&amp; OR(
ISBLANK($Setup.Metadata_Activation_Settings__c.SObject_API_Name__c),
CONTAINS($Setup.Metadata_Activation_Settings__c.SObject_API_Name__c,
&apos;QTB_Promotion__c&apos;))),
NOT(ISBLANK(QTB_Promo_Amount__c)),
NOT(ISBLANK((QTB_Promo_Percent__c)))
)</errorConditionFormula>
    <errorMessage>you can&apos;t have values on both amount and percent</errorMessage>
</ValidationRule>