force-app/main/default/objects/QTB_Promotion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>QTB_Promo_Code__c</columns>
    <columns>QTB_Promo_Term__c</columns>
    <columns>QTB_Product__c</columns>
    <columns>QTB_Country__c</columns>
    <columns>QTB_Start_Date__c</columns>
    <columns>QTB_End_Date__c</columns>
    <columns>QTB_Quote_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>